--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -1,9 +1,14 @@
+:root {
+  --theme-yellow: #ffce00;
+}
+
 .wrap {
   background-color: #f5f5f5;
 }
 
-.add-divider {
-  border-left: 1px solid #cccccc;
+.left-fixed {
+  position: absolute;
+  left: 30px;
 }
 
 .add-padding {
@@ -76,25 +81,26 @@
 }
 
 .resume_button:hover {
-  color: #ffb50d;
+  color: var(--theme-yellow);
 }
 
 .highlight {
-  border-bottom: 2px solid #ffb50d;
+  border-bottom: 2px solid var(--theme-yellow);
   display: inline;
 }
 
 .is-checked {
-  color: #ffb50d;
-  border-bottom: 2px solid #ffb50d;
+  color: var(--theme-yellow);
+  border-bottom: 2px solid var(--theme-yellow);
   display: inline;
 }
 
 .brain {
+  padding-top: 70px;
   background-image: url("../img/brain.png");
   background-repeat: no-repeat;
-  background-position: 95% 90%;
-  background-size: 60%;
+  background-position: 95% 110px;
+  background-size: 50%;
 }
 
 .top-icon {
@@ -126,14 +132,28 @@
   transition: 0.5s all ease-out;
   color: #707070;
   text-decoration: none;
-  border-bottom: 3px solid #f5f5f5;
+  border-bottom: 3px solid transparent;
 }
 
 #top-menu a:hover {
-  color: #ffb50d;
+  color: var(--theme-yellow);
 }
 
 #top-menu li.active a {
-  border-bottom: 3px solid #ffb50d;
-  color: #ffb50d;
+  border-bottom: 3px solid var(--theme-yellow);
+  color: var(--theme-yellow);
+}
+
+.right-items {
+  float: right;
+}
+
+@media (max-width: 639px) {
+  .right-items {
+    float: left;
+  }
+
+  .brain {
+    padding-top: 50px;
+  }
 }
