--- a/assets/css/foundation.css
+++ b/assets/css/foundation.css
@@ -1110,6 +1110,7 @@ code {
 .grid-container {
   padding-right: 0.625rem;
   padding-left: 0.625rem;
+  max-width: 75rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -7090,9 +7091,8 @@ html.is-reveal-open body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.top-bar,
-.top-bar ul {
-  background-color: #f5f5f5;
+.top-bar{
+  background-color: rgba(245, 245, 245, 0.9);
 }
 .top-bar input {
   max-width: 200px;
