--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -31,6 +31,7 @@
   -webkit-transition: 0.5s all ease-out;
   -moz-transition: 0.5s all ease-out;
   transition: 0.5s all ease-out;
+  color: #c3c3c3;
 }
 
 .git-icon:hover {
