--- a/assets/css/bg-image.css
+++ b/assets/css/bg-image.css
@@ -27,7 +27,7 @@
 }
 
 .bg-aq-p1 {
-  background-image: url("../img/photo/Aqua1.jpg");
+  background-image: url("../img/photo/Aquarium/Aqua1.jpg");
   background-size: cover;
   background-position: 50% 50%;
 }
