--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -10,7 +10,7 @@
   visibility: visible;
   display: block;
   position: absolute;
-  top: 50%;
+  top: 50vh;
   left: 50%;
   z-index: 100;
   height: 100vh;
