--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -9,8 +9,8 @@
 #loading {
   visibility: visible;
   display: block;
-  position: absolute;
-  top: 50vh;
+  position: fixed;
+  top: 50%;
   left: 50%;
   z-index: 100;
   height: 100vh;
